<resources>
    <string name="app_name">Wenchang Task5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="cmd">Type Command</string>
    <string name="register">Register</string>
    <string name="response_from_server">Response from server:</string>
    <string name="online_user">Online users:</string>
    <string name="refresh">Refresh</string>
    <string name="username">User:</string>
    <string name="select_user">Select a user:</string>
    <string name="invite">invite</string>
    <string name="end">end</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="msg">Msg:</string>
    <string name="msg_send">send</string>
    <string name="kill">kill</string>
    <string name="disconnect">logout</string>
    <string name="mode">Mode:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="peppers">peppers</string>
    <string name="peppersjpg">peppersjpg</string>
    <string name="damagedpeppers">damagedpeppers</string>
    <string name="damagedpeppersjpg">damagedpeppersjpg</string>
    <string name="verydamagedpeppers">verydamagedpeppers</string>
    <string name="selectaudio">Select an audio file:</string>
    <string name="playArray">Play array version:</string>
    <string name="record">Record</string>
    <string name="reset">Reset</string>
    <string name="sendRec">Send Rec to BarryBot via mode:</string>
    <string name="eightHz">8Hz</string>
    <string name="twelveHz">12Hz</string>
</resources>
