<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mbassjsp.task5.AudioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectaudio"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>
            <Spinner
                android:id="@+id/spinnerAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:layout_weight="1"
                android:onClick="stopSound"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playArray"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/btnArrayPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/record" />

            <Button
                android:id="@+id/btnPlayRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnResetRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendRec"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/spinnerMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSendRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send" />

            <Button
                android:id="@+id/btnPlay8k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eightHz"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPlay12k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twelveHz"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnResetReceived"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>